# team-creator

./: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  team-creator-63933fb27cdce487.js  team-creator-63933fb27cdce487_bg.wasm  team-creator-941f474193c3d3af.js  team-creator-941f474193c3d3af_bg.wasm  team_creator_cache.ron
src/: app.rs  cache.rs  extensions.rs  main.rs  str_ext.rs  team_creator.rs
src/views/: _template.rs  mod.rs
src/views/lambidinha/: audio_player.rs  mod.rs
src/views/settings/: mod.rs
src/views/spin_wheel/: constants.rs  mod.rs  wheel.rs
src/views/team_creator/: mod.rs  team_creator.rs
