[package]
name = "team-creator"
version = "0.1.0"
edition = "2024"

[package.metadata.winresource]
OriginalFilename = "team-creator.exe"
FileDescription = "Team Creator Application"
ProductName = "Team Creator"
CompanyName = "Zallix"
LegalCopyright = "Copyright © 2025"

[dependencies]
eframe = "0.33.0"
rand = "0.9.2"
ron = "0.11.0"
serde = "1.0.228"
image = { version = "0.25.8", default-features = false, features = ["ico"] }

[build-dependencies]
winresource = "0.1.23"
