[package]
name = "team-creator"
version = "0.1.0"
edition = "2024"

[package.metadata.winresource]
OriginalFilename = "team-creator.exe"
FileDescription = "Team Creator Application"
ProductName = "Team Creator"
CompanyName = "Zallix"
LegalCopyright = "Copyright © 2025"

[dependencies]
eframe = "0.33.0"
ron = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
image = { version = "0.25.8", default-features = false, features = ["ico"] }
rand = { version = "0.9.2" }
ulid = { version = "1.2.1", features = ["serde"] }
rodio = { version = "0.21.1" }
cpal = { version = "0.16.0", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["console", "MediaStreamConstraints"] }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
winresource = "0.1.23"

[profile.release]
opt-level = 2
